chore: optimize backend configuration and CORS for cloud deployment