@@ -13,24 +13,35 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${cors.allowed-origins}")
+    @Value("${cors.allowed-origins:*}")
     private String allowedOrigins;
 
-    @Value("${cors.allowed-methods}")
+    @Value("${cors.allowed-methods:GET,POST,PUT,DELETE,OPTIONS,PATCH}")
     private String allowedMethods;
 
-    @Value("${cors.allowed-headers}")
+    @Value("${cors.allowed-headers:*}")
     private String allowedHeaders;
 
-    @Value("${cors.allow-credentials}")
+    @Value("${cors.allow-credentials:true}")
     private Boolean allowCredentials;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(allowCredentials);
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+
+        if ("*".equals(allowedOrigins.trim())) {
+            config.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            config.setAllowedOriginPatterns(Arrays.asList(allowedOrigins.split(",")));
+        }
+
+        if ("*".equals(allowedHeaders.trim())) {
+            config.setAllowedHeaders(List.of("*"));
+        } else {
+            config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+        }
+
         config.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
         config.setMaxAge(3600L);
 
